# CHANGELOG



## To do

1. 
2. 

## Logs

### Bug Fixes

* 2020-02-19  9panel采用压缩包下载，即增加version

### Features

* 2020-02-14  