@@ -3,6 +3,9 @@ region: '0'
 
 #变量以数字9开头，应用的时候会报错，故采用w9
 
+#File&folder permission: apache | nginx | www-data
+
+w9panel_owner: apache
 w9panel_download_url: https://github.com/Websoft9/9panel.git
 
 w9panel_set_infrastructure: LAMP
