@@ -1,19 +1,13 @@
 ---
-- name: Check HTTP Server type
-  shell: "curl -Is http://127.0.0.1 | grep 'Server' |awk -F ': ' '{print $2}'|tr 'A-Z' 'a-z'"
-  register: http_type
+#preparation tasks for 9panel
 
-- name: Create apps directory
-  file: 
-      path: /data/apps
-      state: directory
-      owner: "{{http_type.stdout}}"
-      group: "{{http_type.stdout}}"
+-name: Remove 9panel if it exist
+ shell: 
+    rm -rf /data/apps/9panel
+    rm -rf /data/wwwroot/www.example.com
 
-# Remove if 9panel exist
-- shell: rm -rf /data/apps/9panel
+# Download,unzip,rename 9panel from different region
 
-# Download from different region
 - name: Download 9panel from Github
   git:
     repo: "{{ w9panel_download_url }}"
@@ -33,39 +27,50 @@
 
 when: region == '1' or region == 1
 
+
+
+# Set 9panel display of infrastructure and apps
+
 - name: set infrastructure of 9Panel to {{w9panel_set_infrastructure}}
   lineinfile:
     path: /data/apps/9panel/js/websoft9.js
     regexp: 'var set_infrastructure='
     line: 'var set_infrastructure="{{ w9panel_set_infrastructure }}";'
 
-- name: set apps of 9Panel
+- name: set apps of 9Panel {{ w9panel_set_apps | list }}
   lineinfile:
     path: /data/apps/9panel/js/websoft9.js
     regexp: 'var set_apps='
     line: 'var set_apps={{ w9panel_set_apps | list }};'
 
-- name: Set default site I
-  shell: cp -rp /data/apps/9panel/*  /data/wwwroot/www.example.com
 
-- name: Set default site II
-  file:
-    path: "/data/wwwroot/www.example.com/{{ item }}"
-    state: absent
-  with_items:
-    - db.html
-    - ftp.html
-    - index.html
-    - tools.html
+#Copy 9panel to /data/wwwroot/www.example.com if w9panel_set_apps==Example
 
-- name: Set default site III
-  command: mv /data/wwwroot/www.example.com/example.html /data/wwwroot/www.example.com/index.html
+- block:
+  - name: Set www.example.com I - copy 9panel
+    shell: cp -rp /data/apps/9panel/*  /data/wwwroot/www.example.com
+
+  - name: Set www.example.com II - delete unnecessary files
+    file:
+      path: "/data/wwwroot/www.example.com/{{ item }}"
+      state: absent
+    with_items:
+      - db.html
+      - ftp.html
+      - index.html
+      - tools.html
+
+  - name: Set www.example.com II - rename index.html
+    command: mv /data/wwwroot/www.example.com/example.html /data/wwwroot/www.example.com/index.html
+
+
+#System settings for 9panel
 
 - name: Change apps directory Own
   file: 
       path: /data/apps
-      owner: "{{http_type.stdout}}"
-      group: "{{http_type.stdout}}"
+      owner: "{{w9panel_owner}}"
+      group: "{{w9panel_owner}}"
       recurse: yes
 
 - block:
@@ -74,7 +79,8 @@ when: region == '1' or region == 1
 
   - name: restart Apache
     service: name=httpd state=restarted enabled=yes
-  when: http_type.stdout == "apache"
+
+  when: w9panel_owner == "apache" or w9panel_owner == "www-data"
 
 - block: 
   - name: Copy 9panel Configuration
@@ -82,4 +88,5 @@ when: region == '1' or region == 1
 
   - name: restart Nginx
     service: name=nginx state=restarted enabled=yes
-  when: http_type.stdout == "nginx"
+
+  when: w9panel_owner == "nginx"
