@@ -11,6 +11,8 @@
 
 ### Bug Fixes
 
+* 2020-02-22  取消在9panel中创建 /data/apps
+* 2020-02-22  取消 shell: "curl -Is http://127.0.0.1 | grep 'Server' |awk -F ': ' '{print $2}'|tr 'A-Z' 'a-z'" register: http_type
 * 2020-02-19  9panel采用压缩包下载，即增加version
 
 ### Features
